[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64"]

[project]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
]
dependencies = [
    "ansi2html>=1.6.0",
    "cloup>=3.0.2",
    "colorama>=0.3.9",
    "flask>=1.0.2",
    "pypdf>=3.17.0",
    "tomlkit>=0.12.2",
]
description = "Automatize task creation for OCI"
name = "ocimatic"
requires-python = ">= 3.11"
urls = { Source = "https://github.com/OCIoficial/ocimatic" }
version = "0.1.0"

[project.optional-dependencies]
dev = ["mypy==1.13.0", "pyright==1.1.389", "ruff==0.8.1"]

[project.scripts]
ocimatic = "ocimatic:main"

[tool.setuptools.package-data]
ocimatic = ["resources/**/*", "templates/**/*"]


[tool.pyright]
pythonPlatform = "All"
pythonVersion = "3.11"
typeCheckingMode = "strict"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
ignore = [
    "ANN401",
    "D100",
    "D101",
    "D102",
    "D103",
    "D105",
    "D107",
    "D203",
    "D213",
    "E501",
    "E731",
    "PYI034",
]
select = [
    "ANN",
    "B",
    "C4",
    "COM",
    "D",
    "E",
    "F",
    "FA",
    "FBT",
    "FLY",
    "ISC",
    "N",
    "PERF",
    "PTH",
    "PYI",
    "RUF",
    "SIM",
    "UP",
    "W",
]

[tool.ruff.lint.per-file-ignores]
"setup.py" = ["PTH"]
