[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools-scm>=8"]

[project]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
]
dependencies = [
    "ansi2html~=1.9.2",
    "cloup~=3.0.7",
    "colorama~=0.4.6",
    "flask~=3.1.1",
    "pypdf~=5.7.0",
    "questionary~=2.1.0",
    "typst~=0.13.2",
    "tomlkit~=0.13.3",
    "msgspec>=0.19.0",
    "tomli-w>=1.2.0",
]
description = "Automatize task creation for OCI"
dynamic = ["version"]
name = "ocimatic"
requires-python = ">= 3.12"
urls = { Source = "https://github.com/OCIoficial/ocimatic" }

[project.optional-dependencies]
dev = ["mypy==1.16.1", "pyright==1.1.402", "ruff==0.12.1"]

[project.scripts]
ocimatic = "ocimatic:main"

[tool.setuptools.package-data]
ocimatic = ["resources/**/*", "templates/**/*"]

[tool.setuptools_scm]

[tool.pyright]
pythonPlatform = "All"
pythonVersion = "3.12"
typeCheckingMode = "strict"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
ignore = [
    "ANN401",
    "D100",
    "D101",
    "D102",
    "D103",
    "D105",
    "D106",
    "D107",
    "D203",
    "D213",
    "E501",
    "E731",
    "PYI034",
]
select = [
    "ANN",
    "B",
    "C4",
    "COM",
    "D",
    "E",
    "F",
    "FA",
    "FBT",
    "FLY",
    "ISC",
    "N",
    "PERF",
    "PTH",
    "PYI",
    "RUF",
    "SIM",
    "UP",
    "W",
]

[tool.ruff.lint.per-file-ignores]
"ocimatic/resources/.github/scripts/read_typesetting.py" = ["ALL"]
"setup.py" = ["PTH"]
